--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,117 +1,60 @@
 @import "tailwindcss";
 
 @font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-Lt.otf") format("opentype");
+  font-family: "BasePixel";
+  src: url("/fonts/BasePixel-HighResolution.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "BasePixel";
+  src: url("/fonts/BasePixel-LowResolution.otf") format("opentype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-LtIt.otf") format("opentype");
-  font-weight: 300;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-Rg.otf") format("opentype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-RgIt.otf") format("opentype");
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-Md.otf") format("opentype");
+  font-family: "BasePixel";
+  src: url("/fonts/BasePixel-MediumResolution.otf") format("opentype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-MdIt.otf") format("opentype");
-  font-weight: 500;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-Bd.otf") format("opentype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-BdIt.otf") format("opentype");
-  font-weight: 700;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-Blk.otf") format("opentype");
-  font-weight: 900;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-BlkIt.otf") format("opentype");
-  font-weight: 900;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-UltLt.otf") format("opentype");
+  font-family: "BasePixel";
+  src: url("/fonts/BasePixel-ReducedResolution.otf") format("opentype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-UltLtIt.otf") format("opentype");
-  font-weight: 200;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-XLt.otf") format("opentype");
+  font-family: "BasePixel";
+  src: url("/fonts/BasePixel-TrashResolution.otf") format("opentype");
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-XLtIt.otf") format("opentype");
-  font-weight: 100;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-Th.otf") format("opentype");
-  font-weight: 100;
+  font-family: "BasePixelVF";
+  src: url("/fonts/BasePixelVF.ttf") format("truetype");
+  font-weight: normal;
   font-style: normal;
-}
-
-@font-face {
-  font-family: "SteradianTRIAL";
-  src: url("/fonts/SteradianTRIAL-ThIt.otf") format("opentype");
-  font-weight: 100;
-  font-style: italic;
 }
 
 @theme {
-  --font-steradian: SteradianTRIAL, sans-serif;
+  --font-base-pixel: BasePixel, sans-serif;
+}
+
+[data-testid="ockConnectButton"] {
+  background: #0050ff !important;
+}
+
+.ock-text-inverse {
+  color: #ffffff !important;
+  font-family: var(--font-base-pixel) !important;
+}
+
+.letter-box {
+  border: 1px solid rgb(47, 54, 63) !important;
 }
